Bug 42989 - FORMATTING: Selecting Multiple Cells with Different Formats Show as Same Format and Can't Be Changed as a Group
Summary: FORMATTING: Selecting Multiple Cells with Different Formats Show as Same Form...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: BSA target:25.8.0 target:25.2.0.2
Keywords:
: 50760 66584 76311 77571 96954 (view as bug list)
Depends on:
Blocks: Cell-Format-Dialog
  Show dependency treegraph
 
Reported: 2011-11-16 05:56 UTC by webmeister
Modified: 2025-08-05 20:20 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
ODS File contains fields with different formats. (10.64 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-11-16 05:56 UTC, webmeister
Details

Note You need to log in before you can comment on or make changes to this bug.
Description webmeister 2011-11-16 05:56:35 UTC
Created attachment 53600 [details]
ODS File contains fields with different formats.

Problem description: Cell formats show as same when they aren't.

Steps to reproduce:
1. In the attached document, select cells A3 through A12.
2. Select Format>Cells.  You see Number>General.  (This is not true.)  Click OK.
3. Select cells A5 through A12.
4. Select Format>Cells.  Now you see Text.

Current behavior: Shows cells A3 through A12 as same.  Click OK and nothing changes.

Expected behavior: Show cells as various.  (Give me some indication.)  Let me change the whole group in one setting.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Macintosh; U; PPC Mac OS X 10.4; fr; rv:1.9.0.19) Gecko/2011091218 Camino/2.0.9 (MultiLang) (like Firefox/3.0.19)
Comment 1 sasha.libreoffice 2012-04-20 09:47:44 UTC
reproduced in 3.3.4 and 3.5.2 on Fedora 64 bit
Comment 2 Harald Koester 2012-05-25 01:41:10 UTC Comment hidden (off-topic)
Comment 3 Harald Koester 2012-12-07 11:27:34 UTC Comment hidden (obsolete)
Comment 4 sophie 2014-04-29 14:55:10 UTC
*** Bug 77571 has been marked as a duplicate of this bug. ***
Comment 5 QA Administrators 2015-06-08 14:42:16 UTC Comment hidden (obsolete)
Comment 6 Harald Koester 2015-06-18 09:17:09 UTC
Bug still exists in Calc as well in Writer with version 4.4.3 under Win7.
Comment 7 QA Administrators 2016-09-20 10:01:16 UTC Comment hidden (obsolete)
Comment 8 Harald Koester 2016-09-30 21:27:48 UTC
I did some more research: 

(1) In Calc it is possible to change cells with different number formats as a group if you change the category. E.g. step 2 of initial report:

Format > Cells... > select category 'Currency' > OK

In this case all cells are formated as currency. The bug only appears, if you keep the displayed category.

(2) In Writer it is always possible to change cells with different number formats as a group. Only the displayed number format is wrong.


Bug still exists in version 5.2.2 with Win7.
Bug already exists in version 3.3.0. Hence inherited from OOo.
Comment 9 QA Administrators 2018-07-18 02:38:51 UTC Comment hidden (obsolete)
Comment 10 mosesantony2013 2019-12-19 06:32:33 UTC Comment hidden (spam)
Comment 11 Harald Koester 2020-03-31 12:58:48 UTC
Checked with version 6.4.2. (Win10)
Bug still exists in Calc and Writer.
Comment 12 Rosemery2511 2020-09-24 00:26:32 UTC Comment hidden (spam)
Comment 13 Henry 2021-01-06 09:33:57 UTC Comment hidden (spam)
Comment 14 techfixya 2021-01-14 06:15:50 UTC Comment hidden (spam)
Comment 15 fixofflineprinters 2021-06-18 15:51:20 UTC Comment hidden (spam)
Comment 16 Rosemery2511 2021-07-14 19:44:50 UTC Comment hidden (spam)
Comment 17 weddingvedas 2021-08-26 20:50:00 UTC Comment hidden (spam)
Comment 18 Mike Kaganski 2024-12-22 08:34:16 UTC
(In reply to Harald Koester from comments #2, #8, #11)
> The same problem exists with tables in Writer.

This but is for Calc. Unless a developer sees that actually, Calc and Writer share the common code responsible for the problem, Writer's counterpart needs an own bug report.
Comment 19 Mike Kaganski 2024-12-22 08:39:53 UTC
*** Bug 76311 has been marked as a duplicate of this bug. ***
Comment 20 Mike Kaganski 2024-12-22 08:40:09 UTC
*** Bug 50760 has been marked as a duplicate of this bug. ***
Comment 21 Mike Kaganski 2024-12-22 13:53:31 UTC
*** Bug 96954 has been marked as a duplicate of this bug. ***
Comment 22 Mike Kaganski 2024-12-22 13:53:44 UTC
*** Bug 66584 has been marked as a duplicate of this bug. ***
Comment 23 Mike Kaganski 2024-12-23 06:15:13 UTC
https://gerrit.libreoffice.org/c/core/+/179190
Comment 24 Mike Kaganski 2024-12-23 08:44:52 UTC
To test the fix, see that previously, in attachment 53600 [details] from comment 0, it was impossible to set A3:A12 to Standard number format in one go (just by selecting the range, opening its cell properties, and selecting the incorrectly pre-selected format), which is possible after the fix. In the multi-format selection case, the dialog doesn't pre-select a format anymore.
Comment 25 Commit Notification 2024-12-23 08:45:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e6d71b9381aba8531c0ebf635c11508e5389fdc6

tdf#42989: don't set fake ATTR_VALUE_FORMAT for multi-format selection

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Commit Notification 2024-12-24 11:18:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/f58d07397bd90c16c7b4d576ec9b4e6ee7ee367e

tdf#42989: don't set fake ATTR_VALUE_FORMAT for multi-format selection

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.