tdf#42989: don't set fake ATTR_VALUE_FORMAT for multi-format selection

Change-Id: Iaed133b19c4d870ff85fd9d2dd69db36318bb28e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179190
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>